core/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    metallb.universe.tf/address-pool: traefik-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.10.120
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.10.120
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
